# spacetimedb-bevy-template

./: .gitignore  .template.json  Cargo.toml  README.md  spacetime.json  spacetime.local.json
crates/client/: Cargo.toml
crates/client/src/: main.rs  stdb.rs
crates/client/src/module_bindings/: mod.rs  move_player_reducer.rs  player_type.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
