[workspace]
resolver = "3"
members = ["crates/*"]
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"

# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
