[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy =  "0.19"
spacetimedb-sdk = "2"
bevy_stdb = "0.12"


# Compile out low-severity logs to improve performance.
# Remove these features if you want to profile your game with tracy.
# (see <https://github.com/bevyengine/bevy/blob/main/docs/profiling.md#tracy-profiler>)
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
